[project]
name = "call-me-maybe"
version = "1.0.0"
description = "Introduction to function calling in LLMs"
authors = [
    {name = "aezzirar",email = "aezzirar@student.1337.ma"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (==1.25.0)",
    "mypy (>=1.20.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pydantic (>=2.13.1,<3.0.0)"
]

[tool.poetry]
package-mode = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
